
	* sysdeps/i386/fpu/libm-test-ulps: Reduce ldouble ULPs for jn
	tests.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2012-02-07  Andreas Schwab  <schwab@linux-m68k.org>

	* math/libm-test.inc (jn_test): Add missing L suffix.

2012-02-10  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/i386/fpu/feupdateenv.c (__feupdateenv) Invoke __feraiseexcept
	instead of feraiseexcept.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* scripts/firstversions.awk: Fix bug in version range handling.

2012-01-26  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13583]
	* sysdeps/x86_64/multiarch/init-arch.h: Define bit_OSXSAVE.
	Clean up HAS_* macros.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): If
	bit_AVX is set also check OSXAVE/XCR0 and set bit_YMM_Usable if
	possible.
	* sysdeps/x86_64/fpu/multiarch/e_atan2.c: Use HAS_YMM_USABLE, not
	HAS_AVX.
	* sysdeps/x86_64/fpu/multiarch/e_exp.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/e_log.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_atan.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_sin.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_tan.c: Likewise.

2012-01-01  Ulrich Drepper  <drepper@gmail.com>

	* posix/getconf.c: Update copyright year.
	* nss/getent.c: Likewise.
	* nss/makedb.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* elf/ldconfig.c: Likewise.
	* elf/pldd.c: Likewise.
	* elf/sotruss.ksh: Likewise.
	* catgets/gencat.c: Likewise.
	* csu/version.c: Likewise.
	* elf/ldd.bash.in: Likewise.
	* elf/sprof.c (print_version): Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* login/programs/pt_chown.c: Likewise.
	* nscd/nscd.c (print_version): Likewise.
	* debug/xtrace.sh: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/mtrace.pl: Likewise.
	* debug/catchsegv.sh: Likewise.

2011-12-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/regex_internal.c (re_string_fetch_byte_case): Remove
	pure attribute.
